k8s/admin-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-admin-server-deployment
  labels:
    app: market-admin-server
spec:
  selector:
    matchLabels:
      app: market-admin-server
  template:
    metadata:
      labels:
        app: market-admin-server
    spec:
      volumes:
        - name: service-config
          configMap:
            name: admin-server-config
      containers:
        - name: market-admin-server
          image: kubernetes.docker.internal:5000/market/admin-server:25.1.1
          imagePullPolicy: Always
          args:
            - --spring.config.import=/etc/opt/admin-server/application-k8s.yml
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/opt/admin-server
              name: service-config
---
apiVersion: v1
kind: Service
metadata:
  name: market-admin-server-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
  selector:
    app: market-admin-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-admin-server-ingress
spec:
  rules:
    - host: admin.mar.ket.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-admin-server-svc
                port:
                  name: http
