k8s/catalogue-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-catalogue-service-deployment
  labels:
    app: market-catalogue-service
spec:
  selector:
    matchLabels:
      app: market-catalogue-service
  template:
    metadata:
      labels:
        app: market-catalogue-service
    spec:
      volumes:
        - name: service-config
          configMap:
            name: catalogue-service-config
      containers:
        - name: market-catalogue-service
          image: host.docker.internal:5000/market/catalogue-service:25.1.1
          imagePullPolicy: Always
          args:
            - --spring.config.import=/etc/opt/catalogue-service/application-k8s.yml
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/opt/catalogue-service
              name: service-config
---
apiVersion: v1
kind: Service
metadata:
  name: market-catalogue-service-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
  selector:
    app: market-catalogue-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-catalogue-service-ingress
spec:
  rules:
    - host: catalogue.api.mar.ket.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-catalogue-service-svc
                port:
                  name: http
