k8s/customer-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-customer-app-deployment
  labels:
    app: market-customer-app
spec:
  selector:
    matchLabels:
      app: market-customer-app
  template:
    metadata:
      labels:
        app: market-customer-app
    spec:
      volumes:
        - name: service-config
          configMap:
            name: customer-app-config
      containers:
        - name: market-customer-app
          image: kubernetes.docker.internal:5000/market/customer-app:25.1.1
          args:
            - --spring.config.import=/etc/opt/customer-app/application-k8s.yml
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/opt/customer-app
              name: service-config
---
apiVersion: v1
kind: Service
metadata:
  name: market-customer-app-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
  selector:
    app: market-customer-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-customer-app-ingress
spec:
  rules:
    - host: customer.mar.ket.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-customer-app-svc
                port:
                  name: http
